sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: '<-' expected but ')' found.
  for(i <= 0 to getNombreValeurs()-1){
                                    ^AlgInsertionSort:15: error: illegal start of simple expression
} 
^